src/recipe/parser/snapshots/rattler_build__recipe__parser__output__tests__2.snap
---
source: src/recipe/parser/output.rs
expression: "outputs[1]"
---
Mapping(
    MappingNode {
        value: {
            ScalarNode {
                value: "package",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "name",
                        }: Scalar(
                            ScalarNode {
                                value: "libzlib-wapi",
                            },
                        ),
                        ScalarNode {
                            value: "version",
                        }: Scalar(
                            ScalarNode {
                                value: "${{version}}",
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "build",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "skip",
                        }: Sequence(
                            SequenceNode {
                                value: [
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "not win",
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        ScalarNode {
                            value: "run_exports",
                        }: Sequence(
                            SequenceNode {
                                value: [
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "${{ pin_subpackage('libzlib-wapi', max_pin='x.x') }}",
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "requirements",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "build",
                        }: Sequence(
                            SequenceNode {
                                value: [
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "${{ compiler('c') }}",
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        ScalarNode {
                            value: "host",
                        }: Null(
                            ScalarNode {
                                value: "~",
                            },
                        ),
                        ScalarNode {
                            value: "run",
                        }: Null(
                            ScalarNode {
                                value: "~",
                            },
                        ),
                        ScalarNode {
                            value: "run_constrained",
                        }: Sequence(
                            SequenceNode {
                                value: [
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "zlib ${{ version }} *_${{ build_num }}",
                                            },
                                        ),
                                    ),
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "zlib-wapi ${{ version }} *_${{ build_num }}",
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "files",
            }: Sequence(
                SequenceNode {
                    value: [
                        Simple(
                            Scalar(
                                ScalarNode {
                                    value: "Library/bin/zlibwapi.dll",
                                },
                            ),
                        ),
                    ],
                },
            ),
            ScalarNode {
                value: "test",
            }: Sequence(
                SequenceNode {
                    value: [
                        Simple(
                            Mapping(
                                MappingNode {
                                    value: {
                                        ScalarNode {
                                            value: "script",
                                        }: Sequence(
                                            SequenceNode {
                                                value: [
                                                    Simple(
                                                        Scalar(
                                                            ScalarNode {
                                                                value: "if not exist \"%LIBRARY_BIN%\\zlibwapi.dll\" exit 1",
                                                            },
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                    },
                                },
                            ),
                        ),
                    ],
                },
            ),
            ScalarNode {
                value: "context",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "version",
                        }: Scalar(
                            ScalarNode {
                                value: "1.2.13",
                            },
                        ),
                        ScalarNode {
                            value: "build_number",
                        }: Scalar(
                            ScalarNode {
                                value: "5",
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "source",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "url",
                        }: Scalar(
                            ScalarNode {
                                value: "http://zlib.net/zlib-${{ version }}.tar.gz",
                            },
                        ),
                        ScalarNode {
                            value: "sha256",
                        }: Scalar(
                            ScalarNode {
                                value: "b3a24de97a8fdbc835b9833169501030b8977031bcb54b3b3ac13740f846ab30",
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "about",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "homepage",
                        }: Scalar(
                            ScalarNode {
                                value: "http://zlib.net/",
                            },
                        ),
                        ScalarNode {
                            value: "license",
                        }: Scalar(
                            ScalarNode {
                                value: "Zlib",
                            },
                        ),
                        ScalarNode {
                            value: "summary",
                        }: Scalar(
                            ScalarNode {
                                value: "Massively spiffy yet delicately unobtrusive compression library",
                            },
                        ),
                        ScalarNode {
                            value: "license_file",
                        }: Scalar(
                            ScalarNode {
                                value: "license.txt",
                            },
                        ),
                        ScalarNode {
                            value: "description",
                        }: Scalar(
                            ScalarNode {
                                value: "zlib is designed to be a free, general-purpose, lossless data-compression\nlibrary for use on virtually any computer hardware and operating system.\n",
                            },
                        ),
                        ScalarNode {
                            value: "repository",
                        }: Scalar(
                            ScalarNode {
                                value: "https://github.com/madler/zlib",
                            },
                        ),
                    },
                },
            ),
            ScalarNode {
                value: "extra",
            }: Mapping(
                MappingNode {
                    value: {
                        ScalarNode {
                            value: "recipe-maintainers",
                        }: Sequence(
                            SequenceNode {
                                value: [
                                    Simple(
                                        Scalar(
                                            ScalarNode {
                                                value: "github_name",
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        ScalarNode {
                            value: "feedstock-name",
                        }: Scalar(
                            ScalarNode {
                                value: "zlib",
                            },
                        ),
                    },
                },
            ),
        },
    },
)
